--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <!-- Left Column: Sign-up Form -->
             <div class="column text-column">
                 <h2>Get Early Access - Starts at $100/Month 
-                    <span id="spotsLeft" style="font-size: 18px; font-weight: bold; color: red;">
+                    <span id="spotsLeft" style="color: red;">
                         Only <span id="spots">100</span> Spots Left
                     </span>
                 </h2>
