--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
         <div class="container">
             <!-- Left Column: Sign-up Form -->
             <div class="column text-column">
-                <h2>Get Early Access - Starts at $100/Month 
-                    <span id="spotsLeft" style="color: red;">
+                <h2>Get Early Access - Starts at $100/Month:  
+                    <h2 id="spotsLeft" style="color: red;">
                         Only <span id="spots">100</span> Spots Left
-                    </span>
+                    </h2>
                 </h2>
 
                 <p><strong>Instantly answer calls, book customers, and recover lost revenue:</strong></p>
