--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
             <!-- Left Column: Sign-up Form -->
             <div class="column text-column">
                 <h2>Get Early Access - Starts at $100/Month:  
-                    <h2 id="spotsLeft" style="color: red;">
+                    <span id="spotsLeft" style="color: red;">
                         Only <span id="spots">100</span> Spots Left
-                    </h2>
+                    </span>
                 </h2>
 
                 <p><strong>Instantly answer calls, book customers, and recover lost revenue:</strong></p>
