New GIF and remove image 2 index.html

--- a/index.html
+++ b/index.html
@@ -158,13 +158,13 @@
                     updateSpotsLeft(); // Run on page load
                 </script>
 
-                <!-- Image 2 -->
+                <!-- Image 2 
                 <img src="assets/image2.jpg" alt="Feature 2" class="small-image"> <!-- Supporting image (Recommended: 500x300px, PNG format) -->
-            </div>
+            </div> 
 
             <!-- Right Column: Large Image -->
             <div class="column image-column">
-                <img src="assets/ConvoUI.gif" alt="Example of the Automated Conversation"> <!-- Added GIF - Recommended Image Size: 600x400px, JPG/PNG format -->
+                <img src="assets/PathFlow.gif" alt="Choose your AI Path"> <!-- Added GIF - Recommended Image Size: 600x400px, JPG/PNG format -->
             </div>
         </div>
     </section>
