--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <ul style="text-align: left; max-width: 600px; margin: 0 auto;">
                     <br><li><strong>Never Miss a Lead Again:</strong> Every call is answered instantly.</li>
                     <li><strong>Appointments Booked for You:</strong> Customers schedule themselves-automatically.</li>
-                    <li><strong>Pays for Iteself:</strong> Just <strong>1 booked job-more than covers the cost-everything else is profit.</strong>.</li>
+                    <li><strong>Pays for Iteself:</strong> Just <strong>1 booked job</strong>-more than covers the cost-everything else is profit.</li>
                 </ul>
 
                 <p><strong><br>Early access starts at $100/month. Secure your spot today.</strong></p>
