--- a/index.html
+++ b/index.html
@@ -108,7 +108,27 @@
                     <input name="Business Name" type="text" placeholder="Business Name*" required> <!-- Business Name input field -->
                     <input type="hidden" id="timestamp" name="Timestamp"> <!-- Hidden field for timestamp -->
                     <button type="submit" class="cta-button">Submit</button> <!-- Submit button -->
-                   
+
+                    <!-- Google tag (gtag.js) event - delayed navigation helper -->
+                    <script>
+                      // Helper function to delay opening a URL until a gtag event is sent.
+                      // Call it in response to an action that should navigate to a URL.
+                      function gtagSendEvent(url) {
+                        var callback = function () {
+                          if (typeof url === 'string') {
+                            window.location = url;
+                          }
+                        };
+                        gtag('event', 'conversion_event_signup', {
+                          'event_callback': callback,
+                          'event_timeout': 2000,
+                          // <event_parameters>
+                        });
+                        return false;
+                      }
+                    </script>
+
+                    
                     <!-- Meta Event Code-->
                     <script type="text/javascript">
                     document.getElementById('submitButton').addEventListener('click', function() {
