--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
     <section class="hero">
         <h2>Never Miss a Service Call Again – Let AI Handle It.</h2>
-        <p>📞 **27% of service calls go unanswered – costing you thousands in lost jobs & revenue.**</p>
-        <p>**Missed Call Agent answers, books, and grows your business while you work.**</p>
+        <p>📞 27% of service calls go unanswered – costing you thousands in lost jobs & revenue.</p>
+        <p>Missed Call Agent answers, books, and grows your business while you work.</p>
         <div class="gif-container" onclick="scrollToForm()">
             <img src="assets/MCAvideo.gif" alt="Missed Call Agent Demo GIF">
         </div>
@@ -64,15 +64,16 @@
     <section class="signup-form" id="signup">
         <div class="container">
             <div class="column text-column">
-                <h2>🚀 Get Early Access – Starts at **$100/Month**
+                <h2>Get Early Access – Starts at $100/Month
                     <span id="spotsLeft" style="color: red;">Only <span id="spots">100</span> Spots Left!</span>
                 </h2>
-                <p>✅ **AI answers calls instantly** – No more lost leads.</p>
-                <p>✅ **Books appointments automatically** – Stop chasing customers.</p>
-                <p>✅ **Works 24/7** – Handles calls even when you're on the job.</p>
-                <p>✅ **Built for HVAC, Plumbers & Electricians** – Not generic software.</p>
-                <p>✅ **Pays for itself** – Just **1 booked job** covers the cost. Everything else is profit.</p>
-                <p><strong>100% ROI Guarantee:</strong> If Missed Call Agent doesn’t pay for itself in the first 30 days, you **don’t pay.**</p>
+                <p>AI answers calls instantly – No more lost leads.</p>
+                <p>Books appointments automatically – Stop chasing customers.</p>
+                <p>Works 24/7 – Handles calls even when you're on the job.</p>
+                <p>Built for HVAC, Plumbers & Electricians – Not generic software.</p>
+                <p>Pays for itself – Just 1 booked job covers the cost. Everything else is profit.</p>
+               <p></p>
+                <p><strong>100% ROI Guarantee:</strong> If Missed Call Agent doesn’t pay for itself in the first 30 days, you don’t pay.</p>
                 <form id="signupForm" method="POST" action="https://script.google.com/macros/s/AKfycbwfICumV-Q3h2IXQ4V7P1w8RN-daeNiH3r95a3nRGUUL6jNAIsoAf-ZPBt4DjluQl8LxQ/exec" target="hidden_iframe" onsubmit="gtag('event','Form_Submission',{event_category:'Lead',event_label:'Early Access'}); fbq('track','CompleteRegistration'); document.getElementById('timestamp').value = new Date().toISOString(); submitted=true;">
                     <input name="Name" type="text" placeholder="Name*" required>
                     <input name="Email" type="email" placeholder="Email*" required>
@@ -81,7 +82,7 @@
                     <button type="submit" class="cta-button">Submit</button>
                 </form>
                 <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
-                <p id="confirmation-message" class="hidden">✅ Your info is submitted. We’ll reach out soon!</p>
+                <p id="confirmation-message" class="hidden">Your info is submitted. We’ll reach out soon!</p>
             </div>
             <div class="column image-column">
                 <img src="assets/image1.jpg" alt="Feature 1">
@@ -93,13 +94,13 @@
         <div class="container">
             <div class="column text-column">
                 <h2>🔹 AI Answers. Schedules. Grows Your Business.</h2>
-                <p>Missed Call Agent **recovers lost revenue** for HVAC, Electricians, and Plumbers.</p>
+                <p>Missed Call Agent recovers lost revenue for HVAC, Electricians, and Plumbers.</p>
                 <ul>
-                    <li>📞 **Never Miss a Lead Again** – Every call is answered instantly.</li>
-                    <li>📅 **Appointments Booked for You** – Customers schedule themselves.</li>
-                    <li>💰 **Pays for Itself** – Just 1 booked job covers the cost.</li>
+                    <li>📞 Never Miss a Lead Again – Every call is answered instantly.</li>
+                    <li>📅 Appointments Booked for You – Customers schedule themselves.</li>
+                    <li>💰 Pays for Itself – Just 1 booked job covers the cost.</li>
                 </ul>
-                <p><strong>Limited Early Access – Just **$100/month**. Secure your spot now.</strong></p>
+                <p><strong>Limited Early Access – Just $100/month. Secure your spot now.</strong></p>
                 <button class="cta-button" onclick="scrollToForm()">Get Early Access</button>
                 <div style="text-align: center; margin-top: 10px;">
                     <p id="spotsLeft" style="font-size: 18px; font-weight: bold; color: red;">Only <span id="spots">100</span> Spots Left!</p>
@@ -112,7 +113,7 @@
     </section>
 
     <footer>
-        <p><strong>100% ROI Guarantee:</strong> If Missed Call Agent doesn’t pay for itself in **30 days**, you don’t pay.</p>
+        <p><strong>100% ROI Guarantee:</strong> If Missed Call Agent doesn’t pay for itself in 30 days, you don’t pay.</p>
         <p>© 2025 Missed Call Agent. All rights reserved.</p>
     </footer>
 
