--- a/index.html
+++ b/index.html
@@ -67,13 +67,16 @@
                 <h2>Get Early Access – Starts at $100/Month
                     <span id="spotsLeft" style="color: red;">Only <span id="spots">100</span> Spots Left!</span>
                 </h2>
-                <p>AI answers calls instantly – No more lost leads.</p>
-                <p>Books appointments automatically – Stop chasing customers.</p>
-                <p>Works 24/7 – Handles calls even when you're on the job.</p>
-                <p>Built for HVAC, Plumbers & Electricians – Not generic software.</p>
-                <p>Pays for itself – Just 1 booked job covers the cost. Everything else is profit.</p>
-               <p></p>
-                <p><strong>100% ROI Guarantee:</strong> If Missed Call Agent doesn’t pay for itself in the first 30 days, you don’t pay.</p>
+              
+                <div style="padding: 20px 0; line-height: 1.6;">
+                    <p>AI answers calls instantly – No more lost leads.</p>
+                    <p>Books appointments automatically – Stop chasing customers.</p>
+                    <p>Works 24/7 – Handles calls even when you're on the job.</p>
+                    <p>Built for HVAC, Plumbers & Electricians – Not generic software.</p>
+                    <p>Pays for itself – Just 1 booked job covers the cost. Everything else is profit.</p>
+                    <p><strong>100% ROI Guarantee:</strong> If Missed Call Agent doesn’t pay for itself in the first 30 days, you don’t pay.</p>
+                </div>
+              
                 <form id="signupForm" method="POST" action="https://script.google.com/macros/s/AKfycbwfICumV-Q3h2IXQ4V7P1w8RN-daeNiH3r95a3nRGUUL6jNAIsoAf-ZPBt4DjluQl8LxQ/exec" target="hidden_iframe" onsubmit="gtag('event','Form_Submission',{event_category:'Lead',event_label:'Early Access'}); fbq('track','CompleteRegistration'); document.getElementById('timestamp').value = new Date().toISOString(); submitted=true;">
                     <input name="Name" type="text" placeholder="Name*" required>
                     <input name="Email" type="email" placeholder="Email*" required>
