--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <span id="spotsLeft" style="color: red;">Only <span id="spots">100</span> Spots Left!</span>
                 </h2>
               
-                <div style="padding: 20px 0; line-height: 1.6;">
+                <div style="padding: 20px 0; line-height: 2.0;">
                     <p>AI answers calls instantly – No more lost leads.</p>
                     <p>Books appointments automatically – Stop chasing customers.</p>
                     <p>Works 24/7 – Handles calls even when you're on the job.</p>
@@ -96,7 +96,7 @@
     <section class="about">
         <div class="container">
             <div class="column text-column">
-                <h2>🔹 AI Answers. Schedules. Grows Your Business.</h2>
+                <h2>AI Answers. Schedules. Grows Your Business.</h2>
                 <p>Missed Call Agent recovers lost revenue for HVAC, Electricians, and Plumbers.</p>
                 <ul>
                     <li>📞 Never Miss a Lead Again – Every call is answered instantly.</li>
