--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
                 </h2>
               
                 <div style="padding: 20px 0; line-height: 2.0;">
-                    <p>AI answers calls instantly – No more lost leads.</p>
-                    <p>Books appointments automatically – Stop chasing customers.</p>
-                    <p>Works 24/7 – Handles calls even when you're on the job.</p>
-                    <p>Built for HVAC, Plumbers & Electricians – Not generic software.</p>
-                    <p>Pays for itself – Just 1 booked job covers the cost. Everything else is profit.</p>
+                    <p><strong>AI answers calls instantly</strong> – No more lost leads.</p>
+                    <p><strong>Books appointments automatically</strong> – Stop chasing customers.</p>
+                    <p><strong>Works 24/7</strong> – Handles calls even when you're on the job.</p>
+                    <p><strong>Built for HVAC, Plumbers & Electricians</strong> – Not generic software.</p>
+                    <p><strong>Pays for itself</strong> – Just 1 booked job covers the cost. Everything else is profit.</p>
                     <p><strong>100% ROI Guarantee:</strong> If Missed Call Agent doesn’t pay for itself in the first 30 days, you don’t pay.</p>
                 </div>
               
