--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
 
     <section class="about">
         <div class="container">
-            <div class="column text-column">
+            <div style="padding: 20px 0; line-height: 2.0;" class="column text-column">
                 <h2>AI Answers. Schedules. Grows Your Business.</h2>
                 <p>Missed Call Agent recovers lost revenue for HVAC, Electricians, and Plumbers.</p>
                 <ul>
-                    <li>📞 Never Miss a Lead Again – Every call is answered instantly.</li>
-                    <li>📅 Appointments Booked for You – Customers schedule themselves.</li>
-                    <li>💰 Pays for Itself – Just 1 booked job covers the cost.</li>
+                    <li>📞 <strong>Never Miss a Lead Again</strong> – Every call is answered instantly.</li>
+                    <li>📅 <strong>Appointments Booked for You</strong> – Customers schedule themselves.</li>
+                    <li>💰 <strong>Pays for Itself</strong> – Just 1 booked job covers the cost.</li>
                 </ul>
                 <p><strong>Limited Early Access – Just $100/month. Secure your spot now.</strong></p>
                 <button class="cta-button" onclick="scrollToForm()">Get Early Access</button>
