--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 <!-- HOW IT WORKS -->
     <section class="how-it-works">
         <h2>How It Works</h2>
+      <div class="column text-column">
         <div class="steps-container">
             <div class="step">
                 
@@ -119,6 +120,8 @@
       <div class="column image-column">
                 <img src="assets/PathFlow.gif" alt="Choose your AI Path">
             </div>
+      </div>
+    
     </section>
 
     <!-- TRUST SIGNALS 
