--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
     </section>
 
-<!-- HOW IT WORKS -->
+<!-- HOW IT WORKS 
   <div class="steps-container">
   <section class="how-it-works">
         <h2>How It Works</h2>
@@ -124,7 +124,37 @@
             </div>
      
     
+    </section> -->
+
+  <!-- HOW IT WORKS -->
+    <section class="how-it-works">
+        <div class="container">
+            <div class="column text-column">
+                <h2>How It Works</h2>
+                <div class="steps">
+                    <div class="step">
+                        <p><strong>AI Answers Calls Instantly</strong></p>
+                    </div>
+                    <div class="step">
+                        <p><strong>Books Appointments for You</strong></p>
+                    </div>
+                    <div class="step">
+                        <p><strong>Grows Your Business on Autopilot</strong></p>
+                    </div>
+                </div>
+                <button class="cta-button" onclick="scrollToForm()">100% ROI Guarantee</button>
+                <div style="text-align: center; margin-top: 10px;">
+                    <p id="spotsLeft" style="font-size: 18px; font-weight: bold; color: red;">
+                        Only <span id="spots">100</span> Spots Left!
+                    </p>
+                </div>
+            </div>
+            <div class="column image-column">
+                <img src="assets/PathFlow.gif" alt="Choose your AI Path">
+            </div>
+        </div>
     </section>
+
 
     <!-- TRUST SIGNALS 
     <section class="trust">
