--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 </div>
             </div>
 
-          <section class="trust">
+          <section class="steps">
         <h2>Trusted by HVAC, Plumbing & Electrical Pros</h2>
         <p>Join top service pros using AI to grow their businesses.</p>
     </section>
