--- a/index.html
+++ b/index.html
@@ -178,6 +178,9 @@
           <section class="steps">
         <h2>Trusted by HVAC, Plumbing & Electrical Pros</h2>
         <p>Join top service pros using AI to grow their businesses.</p>
+            <div class="column image-column">
+                <img src="assets/image2.jpg" alt="Feature 2">
+            </div>
     </section>
           
         <!--    <div class="column image-column">
