--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <h2>Trusted by HVAC, Plumbing & Electrical Pros</h2>
         <p>Join top service pros using AI to grow their businesses.</p>
             <div class="column image-column">
-                <img src="assets/image2.jpg" alt="Feature 2">
+                <img src="assets/image3.jpg" alt="HVAC Tech Doing Work on a unit">
             </div>
     </section>
           
