--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           <section class="steps">
         <h2>Trusted by HVAC, Plumbing & Electrical Pros</h2>
         <p>Join top service pros using AI to grow their businesses.</p>
-            <div class="column image-column" style="text-align: center;">
+            <div class="column image-column">
                 <img src="assets/image3.jpg" alt="HVAC Tech Doing Work on a unit">
             </div>
     </section>
