--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <div class="step">
                         <p><strong>Grows Your Business on Autopilot</strong></p>
                     </div>
-                </div>
+                </div style="padding: 20px 0;">
                 <button class="cta-button" onclick="scrollToForm()">100% ROI Guarantee</button>
             </div>
             <div class="column image-column">
@@ -170,7 +170,11 @@
                 </ul>
                 <p><strong>Limited Early Access – Just $100/month. Secure your spot now.</strong></p>
                 <button class="cta-button" onclick="scrollToForm()">Get Early Access</button>
-                <div style="text-align: center; margin-top: 10px;">
+                <div style="text-align: center; margin-top: 10px;"
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                  >
                     <p id="spotsLeft" style="font-size: 18px; font-weight: bold; color: red;">Only <span id="spots">100</span> Spots Left!</p>
                 </div>
             </div>
