--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                     <div class="step">
                         <p><strong>Grows Your Business on Autopilot</strong></p>
                     </div>
-                <div style="margin-top: 10px;">
-                <button class="cta-button" onclick="scrollToForm()">100% ROI Guarantee</button>
+                <div>
+                <button style="margin-top: 10px; "class="cta-button" onclick="scrollToForm()">100% ROI Guarantee</button>
             </div>
             <div class="column image-column">
                 <img src="assets/PathFlow.gif" alt="Choose your AI Path">
