--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <p><strong>Grows Your Business on Autopilot</strong></p>
                     </div>
                 <div>
-                <button style="margin-top: 10px; "class="cta-button" onclick="scrollToForm()">100% ROI Guarantee</button>
+                <button class="cta-button" onclick="scrollToForm()">100% ROI Guarantee</button>
             </div>
             <div class="column image-column">
                 <img src="assets/PathFlow.gif" alt="Choose your AI Path">
