--- a/index.html
+++ b/index.html
@@ -141,11 +141,13 @@
                     <div class="step">
                         <p><strong>Grows Your Business on Autopilot</strong></p>
                     </div>
+                </div>
                 <div>
                 <button class="cta-button" onclick="scrollToForm()">100% ROI Guarantee</button>
             </div>
             <div class="column image-column">
                 <img src="assets/PathFlow.gif" alt="Choose your AI Path">
+            </div>
             </div>
         </div>
     </section>
