--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           </div>  <!-- Properly close .steps here -->
     
           <!-- Then you can have your button or a new <div> -->
-          <button class="cta-button" onclick="scrollToForm()">100% ROI Guarantee</button>
+          <button style="margin-top: 10px;" class="cta-button" onclick="scrollToForm()">100% ROI Guarantee</button>
         </div>
     
         <div class="column image-column">
