--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
     </header>
 
     <section class="hero">
-        <h2>AI Answers Your Calls & Books Jobs – Automatically. Built for HVAC, Plumbing and Electric Companies</h2>
+        <h2>AI Answers Your Calls & Books Jobs – Automatically.</h2>
+          <h2>Built for HVAC, Plumbing and Electric Companies like yours.</h2>
         <p>📞 27% of service calls go unanswered – costing you thousands in lost jobs & revenue.</p>
         <p><strong>Let AI answer, book, and grow your business while you work.</strong></p>
         <p style="font-size: 20px; font-weight: bold;">Only $100/mo – Pays for Itself with Just 1 Job</p>
