Update add privacy policy index.html

--- a/index.html
+++ b/index.html
@@ -167,7 +167,10 @@
     <footer>
         <p><strong>100% ROI Guarantee:</strong> If Missed Call Agent doesn’t pay for itself in 30 days, you don’t pay.</p>
         <p>© 2025 Missed Call Agent. All rights reserved.</p>
+        <a href="privacypolicy.html">Privacy Policy</a>
     </footer>
+    
+    
 
     <script>
         function scrollToForm() {
