--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -11,13 +11,13 @@
     <header>
         <div class="logo-container">
             <a href="index.html"><img src="assets/logo.svg" alt="Missed Call Agent Logo" id="logo"></a>
-            <h1>Privacy Policy</h1>
+            <h1 text-align: center;>Privacy Policy</h1>
         </div>
     </header>
 
     <section class="content">
         <h2>Privacy Policy</h2>
-        <p>Effective Date: [Insert Date]</p>
+        <p>Effective Date: January 1, 2025</p>
 
         <p>Your privacy is important to us. This Privacy Policy explains how we collect, use, and protect your information when you use our website.</p>
 
