--- a/signedup.html
+++ b/signedup.html
@@ -18,10 +18,10 @@
 
     <section class="confirmation">
         <h1>Your info is submitted. We’ll reach out soon!</h1>
-        <a href="index.html" class="cta-button">Return to Main Page</a>
+        <a style="padding: 20px 0" href="index.html" class="cta-button">Return to Main Page</a>
     </section>
 
-    <footer>
+    <footer style="padding: 20px 0">
         <p>© 2025 Missed Call Agent. All rights reserved.</p>
         <a href="privacypolicy.html">Privacy Policy</a>
     </footer>
