--- a/signedup.html
+++ b/signedup.html
@@ -16,9 +16,9 @@
         <a href="index.html" class="cta-button">Home</a>
     </header>
 
-    <section class="confirmation">
-        <h1>Your info is submitted. We’ll reach out soon!</h1>
-        <a href="index.html" class="cta-button">Return to Main Page</a>
+    <section class="confirmation" style="padding: 80px 20px; text-align: center;">
+        <h1 style="margin-bottom: 30px;">Your info is submitted. We’ll reach out soon!</h1>
+        <a href="index.html" class="cta-button" style="display: inline-block; margin-top: 20px;">Return to Main Page</a>
     </section>
 
     <footer>
