--- a/testindex.html
+++ b/testindex.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Recover 27% of lost calls with AI that answers & books jobs 24/7. $100/mo with 100% ROI guarantee."> <!-- Conversion-focused meta description -->
 
     <!-- STYLESHEET -->
-    <link rel="stylesheet" href="styles.css"> <!-- Main styles -->
+    <link rel="stylesheet" href="teststyles.css"> <!-- Main styles -->
 
     <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap" rel="stylesheet"> <!-- Clean, readable font -->
