--- a/testindex.html
+++ b/testindex.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Recover 27% of lost calls with AI that answers & books jobs 24/7. $100/mo with 100% ROI guarantee."> <!-- Conversion-focused meta description -->
 
     <!-- STYLESHEET -->
-    <link rel="stylesheet" href="teststyles.css"> <!-- Main styles -->
+    <link rel="stylesheet" href="teststyles.css"> <!-- Updated main styles -->
 
     <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap" rel="stylesheet"> <!-- Clean, readable font -->
@@ -21,7 +21,7 @@
     <!-- Google Tag Manager -->
     <script>/* Your existing GTM code */</script>
     <!-- Hotjar Heatmap -->
-    <script>/* Add heatmap code from previous answer */</script>
+    <script>/* Add heatmap code if you have it */</script>
 </head>
 
 <body>
@@ -165,7 +165,7 @@
 
         // Countdown timer
         const countdownElement = document.getElementById('countdown');
-        let seconds = 17947; // 4h 59m 07s
+        let seconds = 17947; // e.g. 4h 59m 07s
         setInterval(() => {
             const hours = Math.floor(seconds / 3600);
             const minutes = Math.floor((seconds % 3600) / 60);
