--- a/testindex.html
+++ b/testindex.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Recover 27% of lost calls with AI that answers & books jobs 24/7. $100/mo with 100% ROI guarantee."> <!-- Conversion-focused meta description -->
 
     <!-- STYLESHEET -->
-    <link rel="stylesheet" href="teststyles.css"> <!-- Updated main styles -->
+    <link rel="stylesheet" href="teststyles.css"> <!-- Main styles -->
 
     <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap" rel="stylesheet"> <!-- Clean, readable font -->
@@ -21,7 +21,7 @@
     <!-- Google Tag Manager -->
     <script>/* Your existing GTM code */</script>
     <!-- Hotjar Heatmap -->
-    <script>/* Add heatmap code if you have it */</script>
+    <script>/* Add heatmap code from previous answer */</script>
 </head>
 
 <body>
@@ -147,7 +147,29 @@
         <button class="cta-button footer-button" onclick="scrollToForm()">
             Download Free Guide
         </button>
+        <!-- Footer links, including Privacy Policy -->
+        <div class="footer-links">
+            <a href="#privacy-policy">Privacy Policy</a>
+        </div>
     </footer>
+
+    <!-- PRIVACY POLICY SECTION -->
+    <section id="privacy-policy" class="policy-section">
+        <h2>Privacy Policy</h2>
+        <p>
+            We value your privacy. This policy outlines how we collect, use, and protect
+            any information you provide when visiting or using our services.
+        </p>
+        <p>
+            We only use your personal data to enhance your experience and never share
+            it with third parties without your consent. You can request to have your
+            data deleted at any time by contacting us at support@example.com.
+        </p>
+        <p>
+            By using this site, you agree to the terms outlined here. We reserve the
+            right to update this policy as needed.
+        </p>
+    </section>
 
     <!-- CONVERSION SCRIPTS -->
     <script>
@@ -165,7 +187,7 @@
 
         // Countdown timer
         const countdownElement = document.getElementById('countdown');
-        let seconds = 17947; // e.g. 4h 59m 07s
+        let seconds = 17947; // 4h 59m 07s, example
         setInterval(() => {
             const hours = Math.floor(seconds / 3600);
             const minutes = Math.floor((seconds % 3600) / 60);
