Update sign up form button text index.html

--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
                     <input name="Email" type="email" placeholder="Email*" required>
                     <input name="Business Name" type="text" placeholder="Business Name*" required>
                     <input type="hidden" id="timestamp" name="Timestamp">
-                    <button type="submit" class="cta-button">Submit</button>
+                    <button type="submit" class="cta-button">
+                      <span class="submit-text">Start Free Trial</span>
+                      <span class="submit-subtext">Cancel anytime · $100/mo after 14 days</span>
+                    </button>
                 </form>
                 <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
                 <p id="confirmation-message" class="hidden">Your info is submitted. We’ll reach out soon!</p>
