--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 
     <section class="hero">
         <h2>AI Answers Your Calls & Books Jobs – Automatically.</h2>
-          <h2>Built for HVAC, Plumbing and Electric Companies like yours.</h2>
+          <p>Built for HVAC, Plumbing and Electric Companies like yours.</p>
         <p>📞 27% of service calls go unanswered – costing you thousands in lost jobs & revenue.</p>
         <p><strong>Let AI answer, book, and grow your business while you work.</strong></p>
-        <p style="font-size: 20px; font-weight: bold;">Only $100/mo – Pays for Itself with Just 1 Job</p>
+        <p style="font-size: 20px; font-weight: bold;">Only $100/mo after Free Trial – Pays for Itself with Just 1 Job</p>
 
       
         <div class="gif-container" onclick="scrollToForm()">
