--- a/newtest.html
+++ b/newtest.html
@@ -27,7 +27,7 @@
     }
     </script>
 
-    <link rel="stylesheet" href="optimized-styles.css">
+    <link rel="stylesheet" href="teststyles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
