--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section class="signup-form" id="signup">
         <div class="container">
             <div class="column text-column">
-                <h2>Get Early Access – Only $100/Month after 14 Day Free Trial
+                <h2>Get Early Access – Only $100/Month after 14 Day Free Trial -
                     <span id="spotsLeft" style="color: red;">Only <span id="spots">100</span> Spots Left!</span>
                 </h2>
               
