--- a/signedup.html
+++ b/signedup.html
@@ -17,7 +17,7 @@
     </header>
 
     <section class="confirmation" style="padding: 80px 20px; text-align: center;">
-        <h1 style="margin-bottom: 30px;">Your info is submitted. We’ll reach out soon!</h1>
+        <h1 style="margin-bottom: 30px;">Your info is submitted. You will receive an email shortly with next steps to setup your account.</h1>
         <a href="index.html" class="cta-button" style="display: inline-block; margin-top: 20px;">Return to Main Page</a>
     </section>
 
