--- a/new.html
+++ b/new.html
@@ -326,7 +326,7 @@
                 <span>Missed Call Agent</span>
             </div>
             <button class="btn" onclick="document.getElementById('signup').scrollIntoView({behavior: 'smooth'})">
-                Sign Up
+                Start Free Trial
             </button>
         </div>
     </header>
@@ -335,7 +335,8 @@
     <section class="hero">
         <div class="hero-container animate-in">
             <h1>AI Answers Your Calls &amp; Books Jobs – Automatically.</h1>
-            <p>Built for HVAC, Plumbing, and Electric Companies like yours. <strong>27% of service calls go unanswered</strong>, costing you thousands in lost jobs &amp; revenue. Let AI answer, book, and grow your business while you work.</p>
+            <p>Built for HVAC, Plumbing, and Electric Companies like yours.</p>
+            <p>27% of service calls go unanswered, costing you thousands in lost jobs &amp; revenue. Let AI answer, book, and grow your business while you work.</p>
             <p style="font-size: 1.2rem; margin-top: 1rem;"><strong>Only $100/mo after a 14-Day Free Trial – Pays for Itself with Just 1 Job</strong></p>
             <button class="btn" onclick="document.getElementById('signup').scrollIntoView({behavior: 'smooth'})">
                 Try Risk-Free for 14 Days
@@ -349,7 +350,7 @@
             <div class="feature-card animate-in">
                 <i class="fas fa-phone-alt mb-4"></i>
                 <h3 class="mb-4">Instant AI Call Answering</h3>
-                <p>Never miss a call again — your AI answers in 5 seconds, day or night.</p>
+                <p>Never miss a call again — your AI answers 24/7, day or night.</p>
             </div>
             <div class="feature-card animate-in">
                 <i class="fas fa-calendar-check mb-4"></i>
@@ -360,6 +361,11 @@
                 <i class="fas fa-dollar-sign mb-4"></i>
                 <h3 class="mb-4">Guaranteed ROI</h3>
                 <p>If Missed Call Agent doesn’t pay for itself in 30 days, you don’t pay.</p>
+            </div>
+            <div class="feature-card animate-in">
+                <i class="fas fa-dollar-sign mb-4"></i>
+                <h3 class="mb-4">Revenue Recovery</h3>
+                <p>27% of calls go missed, convert them into booked appointments.</p>
             </div>
         </div>
     </section>
@@ -398,10 +404,10 @@
                 </span>
             </h2>
             <p style="text-align:center; margin-bottom:2rem;">
-                <strong>✔ AI answers calls instantly</strong> <br>
-                <strong>✔ Books appointments automatically</strong> <br>
-                <strong>✔ Works 24/7</strong> <br>
-                <strong>✔ Pays for itself with just 1 job</strong>
+                <strong>AI answers calls instantly</strong> <br>
+                <strong>Books appointments automatically</strong> <br>
+                <strong>Works 24/7</strong> <br>
+                <strong>Pays for itself with just 1 job</strong>
             </p>
             
             <!-- Form with your submission logic -->
@@ -463,15 +469,15 @@
         <div class="testimonials">
             <div class="testimonial animate-in">
                 <p class="mb-4">"Recovered $4,200 in missed calls in our first month!"</p>
-                <strong>- John Smith, HVAC Pros</strong>
+                <strong>- Garrett Thorne, Five Star HVAC</strong>
             </div>
             <div class="testimonial animate-in">
                 <p class="mb-4">"Setup took 10 minutes, now we never miss a call."</p>
-                <strong>- Sarah Johnson, Plumbing Co.</strong>
+                <strong>- Craig and Marina Aldrich, Triple Crown Plumbing & Air</strong>
             </div>
             <div class="testimonial animate-in">
                 <p class="mb-4">"Best investment we've made for our business."</p>
-                <strong>- Mike Brown, Electric Services</strong>
+                <strong>- Reid Callahan, Circuit Masters Electrician LLC</strong>
             </div>
         </div>
     </section>
@@ -484,11 +490,12 @@
                 <p>Never miss another business opportunity</p>
                 <p><strong>100% ROI Guarantee:</strong> If Missed Call Agent doesn’t pay for itself in 30 days, you don’t pay.</p>
             </div>
+            <!-- Contact Us
             <div>
                 <h4 class="mb-4">Contact</h4>
                 <p>support@missedcallagent.com</p>
                 <p>1-800-MISSED-CALL</p>
-            </div>
+            </div> -->
             <div>
                 <h4 class="mb-4">Legal</h4>
                 <p><a href="privacypolicy.html" style="color:white;">Privacy Policy</a></p>
