--- a/new.html
+++ b/new.html
@@ -363,7 +363,7 @@
                 <p>If Missed Call Agent doesn’t pay for itself in 30 days, you don’t pay.</p>
             </div>
             <div class="feature-card animate-in">
-                <i class="fas fa-dollar-sign mb-4"></i>
+                <i class="fas fa-chart-line mb-4" style="color: var(--primary); font-size: 2rem;"></i>
                 <h3 class="mb-4">Revenue Recovery</h3>
                 <p>27% of calls go missed, convert them into booked appointments.</p>
             </div>
@@ -454,6 +454,10 @@
                     <span>Start Free Trial</span>
                 </button>
             </form>
+            
+            <p class="text-center mb-4" style="margin-top: 1rem; color: var(--gray-800);">
+                <i class="fas fa-lock"></i> Your information is secure and encrypted
+            </p>
             
             <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
             <p id="confirmation-message" class="hidden" style="text-align:center; margin-top:1rem;">
