--- a/new.html
+++ b/new.html
@@ -374,16 +374,16 @@
     <section class="how-it-works">
         <div class="how-container animate-in">
             <div>
-                <h2>How It Works</h2>
-                <ul>
-                    <li><strong>AI Answers Calls Instantly</strong> – No more losing leads to voicemail.</li>
-                    <li><strong>Books Appointments for You</strong> – Customers schedule themselves.</li>
-                    <li><strong>Grows Your Business on Autopilot</strong> – Recover missed calls and never look back.</li>
+                <h2 class="text-center">How It Works</h2>
+                <ulclass="text-center">
+                    <li><strong>AI Answers Calls Instantly</strong> – No more losing leads to voicemail</li>
+                    <li><strong>Books Appointments for You</strong> – Customers schedule themselves</li>
+                    <li><strong>Grows Your Business on Autopilot</strong> – Recover missed calls and never look back</li>
                 </ul>
-                <p style="margin-top: 1rem;">
+                <p style="margin-top: 1rem;" class="text-center">
                     <strong>Limited Early Access – Just $100/month. Secure your spot now.</strong>
                 </p>
-                <button class="btn" style="margin-top:1rem;" onclick="document.getElementById('signup').scrollIntoView({behavior: 'smooth'})">
+                <button class="text-center"; class="btn" style="margin-top:1rem;" onclick="document.getElementById('signup').scrollIntoView({behavior: 'smooth'})">
                     100% ROI Guarantee
                 </button>
             </div>
@@ -398,17 +398,11 @@
     <section id="signup" class="signup-section">
         <div class="form-container animate-in">
             <h2 class="text-center">
-                Get Early Access – Only $100/Month after 14 Day Free Trial <br>
+                Lock In Early Pricing: $100/Month after 14 Day Free Trial <br>
                 <span id="spotsLeft" style="color: red; font-size:1rem;">
-                    Only <span id="spots">50</span> Spots Left!
+                    Only <span id="spots">50</span> Spots Left Before Price Increases
                 </span>
             </h2>
-            <p style="text-align:center; margin-bottom:2rem;">
-                <strong>AI answers calls instantly</strong> <br>
-                <strong>Books appointments automatically</strong> <br>
-                <strong>Works 24/7</strong> <br>
-                <strong>Pays for itself with just 1 job</strong>
-            </p>
             
             <!-- Form with your submission logic -->
             <form
