--- a/new.html
+++ b/new.html
@@ -375,7 +375,7 @@
         <div class="how-container animate-in">
             <div>
                 <h2 class="text-center">How It Works</h2>
-                <ulclass="text-center">
+                <ul class="text-center">
                     <li><strong>AI Answers Calls Instantly</strong> – No more losing leads to voicemail</li>
                     <li><strong>Books Appointments for You</strong> – Customers schedule themselves</li>
                     <li><strong>Grows Your Business on Autopilot</strong> – Recover missed calls and never look back</li>
@@ -383,7 +383,7 @@
                 <p style="margin-top: 1rem;" class="text-center">
                     <strong>Limited Early Access – Just $100/month. Secure your spot now.</strong>
                 </p>
-                <button class="text-center"; class="btn" style="margin-top:1rem;" onclick="document.getElementById('signup').scrollIntoView({behavior: 'smooth'})">
+                <button class="btn" align="center"; style="margin-top:1rem;" onclick="document.getElementById('signup').scrollIntoView({behavior: 'smooth'})">
                     100% ROI Guarantee
                 </button>
             </div>
