--- a/new.html
+++ b/new.html
@@ -376,14 +376,14 @@
             <div>
                 <h2 class="text-center">How It Works</h2>
                 <ul class="text-center">
-                    <li><strong>AI Answers Calls Instantly</strong> – No more losing leads to voicemail</li>
-                    <li><strong>Books Appointments for You</strong> – Customers schedule themselves</li>
-                    <li><strong>Grows Your Business on Autopilot</strong> – Recover missed calls and never look back</li>
+                    <p><strong>AI Answers Calls Instantly</strong> – No more losing leads to voicemail</p>
+                    <p><strong>Books Appointments for You</strong> – Customers schedule themselves</p>
+                    <p><strong>Grows Your Business on Autopilot</strong> – Recover missed calls and never look back</p>
                 </ul>
                 <p style="margin-top: 1rem;" class="text-center">
                     <strong>Limited Early Access – Just $100/month. Secure your spot now.</strong>
                 </p>
-                <button class="btn" align="center"; style="margin-top:1rem;" onclick="document.getElementById('signup').scrollIntoView({behavior: 'smooth'})">
+                <button class="btn" align-items="center"; style="margin-top:1rem;" onclick="document.getElementById('signup').scrollIntoView({behavior: 'smooth'})">
                     100% ROI Guarantee
                 </button>
             </div>
