--- a/new.html
+++ b/new.html
@@ -383,9 +383,11 @@
                 <p style="margin-top: 1rem;" class="text-center">
                     <strong>Limited Early Access – Just $100/month. Secure your spot now.</strong>
                 </p>
-                <button class="btn" align-items="center"; style="margin-top:1rem;" onclick="document.getElementById('signup').scrollIntoView({behavior: 'smooth'})">
+                <div style="text-align: center;">
+                  <button class="btn" style="margin-top:1rem;" onclick="document.getElementById('signup').scrollIntoView({behavior: 'smooth'})">
                     100% ROI Guarantee
-                </button>
+                  </button>
+                </div>
             </div>
             <div>
                 <!-- Show your MCAvideo.gif here -->
