--- a/new.html
+++ b/new.html
@@ -484,7 +484,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <div class="footer-container">
+        <div class="footer-container" style="text-align: center;">
             <div>
                 <h3 class="mb-4">Missed Call Agent</h3>
                 <p>Never miss another business opportunity</p>
