--- a/new.html
+++ b/new.html
@@ -241,7 +241,7 @@
         .btn {
             display: inline-block;
             padding: 0.75rem 1.5rem;
-            background: var(--primary);
+            background: var(--gradient-primary);
             color: white;
             border: none;
             border-radius: 0.5rem;
@@ -254,7 +254,7 @@
         }
 
         .btn:hover {
-            background: var(--primary-dark);
+            background: var(--gradient-secondary);
         }
 
         .btn-full {
